--- a/www/index.html
+++ b/www/index.html
@@ -30,14 +30,14 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#intro">Service</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#team">Teams</a></li>
                     <li><a href="#contact">Contactsssss</a></li>
                     <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#intro">Service</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <li><a href="#team">Teams</a></li>
                     <li><a href="#contact">Contactsssss</a></li>
                     <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
                 </ul>
