--- a/www/index.html
+++ b/www/index.html
@@ -29,14 +29,14 @@
             <a href="#" id="logo-container" class="brand-logo">MD Template</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
+                    <li><a href="#work">Works</a></li>
                     <li><a href="#team">Teams</a></li>
                     <li><a href="#contact">Contactsssss</a></li>
                     <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
+                    <li><a href="#work">Works</a></li>
                     <li><a href="#team">Teams</a></li>
                     <li><a href="#contact">Contactsssss</a></li>
                     <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
